# lila

./: .gitignore  CLAUDE.md  DEVELOPING.md  LICENSE  LILA_PROJECT_STATE.md  README.md  SECURITY.md
.github/workflows/: test.yml
client/browser/: behavioral_model.js  index.html
client/browser/css/: style.css
client/browser/js/: agency.js  constants.js  heartbeat.js  main.js  particles.js  reconciliation.js  renderer.js  world-model.js
client/python/: README.md  pyproject.toml
client/python/lila_client/: __init__.py  __main__.py  agency.py  constants.py  imgui_view.py  main.py  pygame_renderer.py  reconciliation.py  replay.py  websocket.py  world_model.py
deploy/compose/: Dockerfile.worker  README.md  docker-compose.yml
docs/: DISTRIBUTED_ENGINE_ARCHITECTURE.md  ECOSIM_PARAMETER_TELEMETRY_SPACE.md  INTERACTION_ACTORS_AND_EFFECTS_ARCHITECTURE.md  LILA_PROJECT_STATE.md  TRAIT_TRANSITION_PLAN.md  TWO_POOL_NUTRIENT_SPEC.md  data_contract.md  intent_based_architecture.md  lessons_learned.md  lila_alpha_species_spec.md  model_adapter_spec.md
search/: README.md  pyproject.toml
search/docs/: WORKING_WITH_RESULTS.md
search/lila_search/: __init__.py  evaluator.py  illumination.py  renderer.py  substrate.py  theta.py
search/lila_search/viz/: atlas.py
search/scripts/: __init__.py  export_world.py  run_illumination.py
search/tests/: test_renderer.py  test_substrate.py  test_theta.py
server/: debug_drought_rain.py  pyproject.toml
server/config/: biomes.json  sim_config.json
server/ecosim/: biome.py  config.py  constants.py  effects.py  engine.py  engine_audit.py  entities.py  environment_manager.py  interactions.py  layout.py  model_adapter.py  movement_system.py  spatial_index.py  telemetry.py  trait_compiler.py  traits.py  voxel_manager.py  worker.py  world_processes.py
server/ecosim/actors/: __init__.py  flow_actors.py  guard_actors.py  interaction_actors.py  movement_actors.py  reproduction_actor.py
server/ecosim/adapters/: __init__.py  mlp.py  random.py  static.py
server/ecosim/distributed/: __init__.py  config.py  messages.py  orchestrator.py  tile.py  world_layout.py
server/examples/: demo_world.json  species_definitions.json
server/tests/: client_harness.py  smoke_test.py  test_actors.py  test_distributed.py  test_ecosim.py  test_movement_actor.py  test_nutrients.py  test_reproduction_actor.py  test_traits.py  test_voxel_grid.py
